--- a/style.css
+++ b/style.css
@@ -520,3 +520,130 @@ form button:hover {
 .memory-card.flipped img {
     transform: rotateY(180deg);  /* Effetto di rotazione quando la carta è girata */
 }
+
+.videos-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.video {
+    max-width: 560px;
+    width: 100%;
+}
+
+.video iframe {
+    width: 100%;
+    height: 315px;
+    border-radius: 10px;
+}
+
+#diagramDiv {
+    width: 100%;
+    height: 600px;
+    border: 1px solid black;
+    position: relative;
+}
+
+/* Nodi della mappa */
+.node {
+    width: 150px;
+    height: 60px;
+    background-color: lightblue;
+    border: 2px solid darkblue;
+    position: absolute;
+    text-align: center;
+    line-height: 60px;
+    cursor: move;
+    border-radius: 10px;
+}
+
+.node-end {
+    background-color: lightgreen;
+    border-color: darkgreen;
+}
+
+/* Connessioni (linee) */
+.link {
+    position: absolute;
+    stroke: darkblue;
+    stroke-width: 2px;
+    pointer-events: none;
+}
+
+/* Etichette delle connessioni */
+.link-text {
+    position: absolute;
+    color: darkblue;
+    font-size: 14px;
+    pointer-events: none;
+    text-align: center;
+    line-height: 15px;
+}
+
+/* Modifica del testo dei nodi */
+.node-text {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    text-align: center;
+    line-height: 60px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+/* Stile per la sezione community */
+.community {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+/* Contenitore delle funzionalità della community */
+.community-features {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px; /* Spazio tra le funzionalità */
+}
+
+/* Stile per ogni funzionalità della community */
+.feature {
+    width: 250px; /* Imposta una larghezza fissa */
+    padding: 15px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+/* Stile per l'immagine all'interno delle funzionalità */
+.feature img {
+    width: 100%;
+    max-width: 200px; /* Imposta una larghezza massima per le immagini */
+    height: auto;
+    border-radius: 8px;
+}
+
+/* Titoli delle funzionalità */
+.feature h3 {
+    margin-top: 15px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* Paragrafi all'interno di ogni funzionalità */
+.feature p {
+    font-size: 14px;
+    color: #555;
+    margin-top: 10px;
+}
